--- a/package.json
+++ b/package.json
@@ -3,13 +3,28 @@
   "description": "server sent events for nodejs and express",
   "version": "0.0.0",
   "author": {
-    "name": "Coder On Deck"
+    "name": "Coder On Deck <coder.on.deck@gmail.com>"
   },
+  "license": "MIT",
+  "keywords" : [
+    "sse"
+  ],
+  "main":"index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/coder-on-deck/turbo-pancake"
   },
   "dependencies": {
     "node-uuid": "^1.4.7"
+  },
+  "devDependencies": {
+    "nodemon": "^1.9.2",
+    "npm-run-all": "^2.3.0",
+    "standard": "^7.1.2"
+  },
+  "scripts": {
+    "test": "npm-run-all lint:once",
+    "lint:once": "standard",
+    "lint:watch": "nodemon --exec 'npm run lint:once --silent'"
   }
 }
